[workspace]
members = [
    ".",
    "example/minimal",
    "example/middleware",
]

[package]
name = "axum_csrf"
version = "0.7.1"
authors = ["Andrew Wheeler <genusistimelord@gmail.com>"]
description = "Library to Provide a CSRF (Cross-Site Request Forgery) protection layer."
edition = "2021"
license = "MIT"
readme = "README.md"
documentation = "https://docs.rs/axum_csrf"
keywords = ["Axum", "CSRF", "Cookies"]
repository = "https://github.com/AscendingCreations/AxumCSRF"

[features]
default = []
layer = ["tower-layer", "tower-service"]

[dependencies]
axum-core = "0.3.3"
http = "0.2.9"
async-trait = "0.1.68"
rand = "0.8.5"
time = { version = "0.3.20", default-features = false, features = ["std"] }
cookie = { version = "0.17.0", features = [
    "percent-encode",
    "signed",
    "private",
] }
argon2 = "0.5.0"
thiserror = "1.0.43"
tower-layer = {version = "0.3.2", optional = true}
tower-service = {version = "0.3.2", optional = true}

[dev-dependencies]
anyhow = "1.0.70"
axum = "0.6.12"