[workspace]
members = [
    ".",
    "example/minimal",
    "example/middleware",
]

[package]
name = "axum_csrf"
version = "0.9.0"
authors = ["Andrew Wheeler <genusistimelord@gmail.com>"]
description = "Library to Provide a CSRF (Cross-Site Request Forgery) protection layer."
edition = "2021"
license = "MIT"
readme = "README.md"
documentation = "https://docs.rs/axum_csrf"
keywords = ["Axum", "CSRF", "Cookies"]
repository = "https://github.com/AscendingCreations/AxumCSRF"

[features]
default = []
layer = ["tower-layer", "tower-service"]

[dependencies]
axum-core = "0.4.0"
http = "1.0.0"
async-trait = "0.1.68"
rand = "0.8.5"
time = { version = "0.3.20", default-features = false, features = ["std"] }
cookie = { version = "0.18.0", features = [
    "percent-encode",
    "signed",
    "private",
] }
thiserror = "1.0.43"
tower-layer = {version = "0.3.2", optional = true}
tower-service = {version = "0.3.2", optional = true}
hmac = "0.12.1"
sha2 = "0.10.8"
base64ct = {version = "1.6.0", features = ["alloc"]}

[dev-dependencies]
anyhow = "1.0.70"
axum = "0.6.12"

[package.metadata.docs.rs]
features = ["layer"]
rustdoc-args = ["--document-private-items"]