[package]
name = "middleware"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.12"
serde = { version = "1.0.159", features = ["derive"] }
tokio = { version = "1.29.1", features = ["full"] }
askama = "0.12.0"
askama_axum = "0.3.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
serde_urlencoded = "0.7.1"
hyper = "0.14.27"
tower = "0.4"
tower-http = { version = "0.4.0", features = ["map-request-body", "util"] }

[dependencies.axum_csrf]
path = "../.."
features = ["layer"]